# akpik-datathon23-dashboard

./: .gitignore  Dockerfile  README.md  celery_worker.py  docker-compose.yaml  pyproject.toml  run.sh
akpik_datathon_dashboard/: __init__.py  admin.py  auth.py  config.py  dashboard.py  db.py  tasks.py  wordlist.txt
akpik_datathon_dashboard/templates/: admin.html  base.html  index.html  login.html  submission.html
migrations/: env.py
migrations/versions/: 76a5455a59ef_add_groups.py  88a66084e81e_add_timestamp.py  dfaccaedbf9f_initial_migration.py
