[tool.poetry]
name = "akpik-datathon-dashboard"
version = "2023.3"
description = "Dashboard for the AKPIK 2023 datathon at @dpg-smuk23"
authors = ["Maximilian Linhoff <maximilian.linhoff@tu-dortmund.de>"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
Flask = "^2.2.3"
python-dotenv = "^1.0.0"
numpy = "^1.24.2"
flask-wtf = "^1.1.1"
flask-sqlalchemy = "^3.0.3"
flask-migrate = "^4.0.4"
celery = {extras = ["redis"], version = "^5.2.7"}
tensorflow = "2.9.3"
flask-login = "^0.6.2"


[tool.poetry.group.deploy.dependencies]
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
